Fix the payment methods alignment on the checkout page ... fixes #6

--- a/assets/sass/custom/_camptix.scss
+++ b/assets/sass/custom/_camptix.scss
@@ -15,6 +15,13 @@
 	.tix_tickets_table .tix-column-remaining {
 		display: none;
 	}
+	
+	.tix-submit {
+		float: none;
+	}
+	.tix-wide-tab {
+		width: 100%;
+	}
 
 	@include media-breakpoint-down(md) {
 		/* Stack columns on mobile */
